<resources>
    <string name="app_name">Password Maker MVI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get Started!</string>
    <string name="home_fragment_application_image">Home fragment application image</string>
    <string name="inc">+ inc</string>
    <string name="random">random</string>
    <string name="dec">- dec</string>
    <string name="enter_a_number">enter a number</string>
    <string name="now_add_some_words">Now add some words</string>
    <string name="third_number">third number</string>
    <string name="enter_a_third_number">enter a third number</string>
    <string name="enter_second_number">enter a second number</string>
    <string name="placeholder_text">placeholder text</string>
    <string name="reset">Reset</string>
    <string name="intro_text_placeholder">Some introductory text. Blah blah blah.</string>
    <string name="get_random_word">get random word</string>
    <string name="word_text_hint">Enter a word, or click below to generate one</string>
    <string name="save_and_continue">Save &amp; Continue</string>
    <string name="network_error_msg">Some network error occurred</string>
    <string name="add_some_symbols">Add some symbols</string>
    <string-array name="symbols_array">
        <item>\?</item>
        <item>\!</item>
        <item>\?"</item>
        <item>\#</item>
        <item>\$</item>
        <item>\%</item>
        <item>&amp;</item>
        <item>\'</item>
        <item>\(</item>
        <item>\)</item>
        <item>\*</item>
        <item>\?+</item>
        <item>\,</item>
        <item>\-</item>
        <item>\.</item>
        <item>\/</item>
        <item>\:</item>
        <item>\;</item>
        <item>&gt;</item>
        <item>&lt;</item>
        <item>\@</item>
        <item>\[</item>
        <item>\]</item>
        <item>\^</item>
        <item>\_</item>
        <item>\`</item>
        <item>\{</item>
        <item>\}</item>
        <item>\|</item>
        <item>\~</item>

    </string-array>
</resources>