<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/numbers_fragment_intro_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/num_one_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/num_two_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numbers_fragment_intro_text"
        app:layout_constraintVertical_chainStyle="spread">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/num_one_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/num_one_random_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp"
            android:hint="@string/enter_a_number" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/num_one_random_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random"
            app:layout_constraintEnd_toStartOf="@+id/num_one_inc_button"
            app:layout_constraintStart_toEndOf="@+id/num_one_dec_button"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/num_one_dec_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dec"
            app:layout_constraintEnd_toStartOf="@+id/num_one_random_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/num_one_inc_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/num_one_random_button"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/num_two_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/num_three_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_one_container">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/num_two_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/num_two_random_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/two_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp"
            android:hint="@string/enter_second_number"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/num_two_random_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random"
            app:layout_constraintEnd_toStartOf="@+id/num_two_inc_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/num_two_dec_button"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/num_two_dec_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dec"
            app:layout_constraintEnd_toStartOf="@+id/num_two_random_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/num_two_inc_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/num_two_random_button"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/num_three_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/go_to_words_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_two_container">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/num_three_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/num_three_random_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:labelFor="@id/three_text">

            <EditText
                android:id="@+id/three_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="@string/enter_a_third_number"
                android:ems="10"
                android:hint="@string/enter_a_third_number"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/num_three_random_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random"
            app:layout_constraintEnd_toStartOf="@+id/num_three_inc_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/num_three_dec_button"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/num_three_dec_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dec"
            app:layout_constraintEnd_toStartOf="@+id/num_three_random_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/num_three_inc_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/num_three_random_button"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/go_to_words_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/now_add_some_words"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>